main.css
/* ... */
/* min-width: 0px*/
.stats_icon {
    display: none;
}

.point_icon {
    display: none;
}

@media (min-width: 650px) {
    :root {
    --container-flex-dir: row;
    --container-align-items: center;
    --right-column-flex-dir: column;
    --right-column-align-items: center;
    --right-column-margin: 0px 0px 0px var(--right-column-margin-left);
    --logging-toolbar-margin-top: 50px;
    }
    
    .stats_icon {
        display: block;
    }
}

@media (min-width: 900px) {
    .point_icon {
        display: block;
    }
}






body {
    font-family: var(--font-family-normal);
    color: var(--color-top-bar);
	background-color: var(--color-background);
	margin: 0;
}

.tennis-buddy-logo {
	font-family: var(--font-family-logo);
}

#container {
	max-width: var(--container-width);
	/* min-height: calc(100vh - var(--top-bar-height) - var(--container-margin));*/
	margin: auto;
	padding-top: calc(var(--top-bar-height) + var(--container-margin));
	display: flex;
	flex-direction: var(--container-flex-dir);
	align-items: var(--container-align-items);
	justify-content: center;
}


/* Top Bar Style */
#topbar, #player-view-topbar {
	position: fixed;
    width: 100%;
	height: var(--top-bar-height);
	display: flex;
	flex-direction: row;
	justify-content: center;
	background-color: var(--color-top-bar);
}

#topbar {
	z-index: 200;
}
#player-view-topbar {
	z-index: 100;
}

#topbar-logo {
	width: calc(var(--container-width) - var(--top-bar-options-width));
    padding: 0px var(--top-bar-options-pad);
	display: flex;
	align-items: center;
	color: var(--top-bar-font-color);
	font-size: var(--top-bar-font-large);
}

#menu-tabs {
    display: flex;
    flex-direction: row;
    align-items: stretch;
    justify-content: center;
}

#menu-tabs input {
    display: none;
}

#menu-tabs label {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    padding: 0px var(--top-bar-options-pad);
	color: var(--top-bar-font-color);
	font-size: var(--top-bar-font-normal);
	cursor: pointer;
}
#menu-tabs label:hover {
  color: var(--top-bar-font-color-hover);
}

#menu-tabs:not(.inactive) input:checked + label {
  color: orange;
  border-left: 2px solid orange;
  border-right: 2px solid orange;
  border-top: 6px solid orange;
}


#topbar-options {
	/*width: var(--top-bar-options-width);*/
	display: flex;
	flex-direction: row;
	justify-content: flex-end;
}

#topbar-options .menu-item-wrapper {
	position: relative;
}

#topbar-options .menu-item {
	height: var(--top-bar-height);
	padding: 0 var(--top-bar-options-pad);
	display: flex;
	align-items: center;
	color: var(--top-bar-font-color);
	font-size: var(--top-bar-font-normal);
	cursor: pointer;
}
#topbar-options .menu-item:hover {
	color: var(--top-bar-font-color-hover);
}
#topbar-options .menu-item > img {
	height: 50%;
}


/* Top Bar Popup & Dropdown Style */
#topbar-options .menu-popup {
	height: auto;
	position: absolute;
	top: var(--top-bar-height);
	right: 0;
	border-radius: 0 0 var(--top-bar-popup-radius) var(--top-bar-popup-radius);
	background-color: var(--color-top-bar-popup);
	text-align: left;
	display: none;
}

#menu-menu .menu-popup .menu-popup-container {
	display: flex;
	flex-direction: column;
	width: var(--top-bar-popup-width);
}

#menu-menu .menu-popup .menu-item {
	width: calc(var(--top-bar-popup-width) - 2 * var(--top-bar-popup-pad));
	padding: 0 var(--top-bar-popup-pad);
	color: var(--top-bar-font-color);
	font-size: var(--top-bar-font-small);
	text-align: left;
	cursor: pointer;
}
#menu-menu .menu-popup .menu-item:last-child {
	border-radius: 0 0 var(--top-bar-popup-radius) var(--top-bar-popup-radius);
}
#menu-menu .menu-popup .menu-item:hover {
	background-color: var(--color-top-bar);
}

#menu-menu .menu-dropdown .menu-item {
	width: calc(var(--top-bar-popup-width) - 2 * var(--top-bar-dropdown-pad));
	padding: 0 var(--top-bar-dropdown-pad);
	background-color: var(--color-top-bar-dropdown);
	font-size: var(--top-bar-font-small);
	text-align: left;
	cursor: pointer;
}
#menu-menu .menu-dropdown .menu-item:last-child {
	border-radius: 0;
}
#menu-menu .menu-dropdown .menu-item:hover {
	background-color: var(--color-top-bar);
}

#current-matches-empty {
	width: var(--top-bar-popup-width);
	padding: 20px;
	background-color: var(--color-top-bar-dropdown);
	color: var(--top-bar-font-color);
	font-size: 16px;
	cursor: not-allowed;
	display: none;
}
/* (...Top Bar Popup & Dropdown Style) */
/* (...Top Bar Style) */


/* Left Content Bar*/
#content {
  display: flex;
	flex: 5;
  flex-direction: column;
  align-items: stretch;
  justify-content: center;
}


/* Players Names Header Style */
#player-names {
	display: flex;
	flex-direction: column;
}

.names_header{
	display: flex;
	flex-direction: row;
	justify-content: space-around;
	align-items: center;
}

#swap_btn{
  width: var(--player-names-button-size);
  height: var(--player-names-button-size);
	padding: var(--player-names-button-pad);
	border: none;
	border-radius: var(--button-radius-normal);
	background-color: var(--player-names-button-background);
	text-decoration: none;
  cursor: pointer;
}
#swap_btn:hover {
	background: var(--player-names-button-background-hover);
	text-decoration: none;
}

#swap_icon{
	width: 100%;
	height: 100%;
}

.player_label{
	width: var(--player-names-label-width);
	text-align: center;
	font-size: var(--player-names-label-font);
    overflow-wrap: break-word;
}
/* (...Players Names Header Style) */


/* Tennis Court UI Style */
#logging-ui {
  align-self: stretch;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

#tennis-court {
  flex: var(--tennis-court-flex);
  margin: var(--tennis-court-margin) var(--tennis-court-margin) 0px;
  min-width: var(--tennis-court-min-width);
	opacity: var(--tennis-court-opacity);
}

#tennis-player {
	width: var(--tennis-player-width);
  position: absolute;
  top: 0;
  left: 0;
  transform: translate(-50%, -50%);
	z-index: 1;
}
/* ... */

